--- a/includes/header.html
+++ b/includes/header.html
@@ -10,6 +10,7 @@
             <a href="/pages/features.html" class="nav-features">Tính năng</a>
             <a href="/pages/guide.html" class="nav-guide">Hướng dẫn</a>
             <a href="/pages/versions.html" class="nav-pricing">Phiên bản</a>
+            <a href="/pages/pricing.html" class="nav-pricing">Giá</a>
             <a href="/pages/policies.html" class="nav-legal">Điều khoản</a>
         </nav>
     </div>
